tests/specs/ecosystem/crisislab/timeline/0_11_1.test
crisislab/timeline/0.11.1
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'HTMLElement'.
  container: HTMLElement;
             ~~~~~~~~~~~
    at file://<tmpdir>/src/TimeLine.ts:9:14

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
  declare container: HTMLElement;
                     ~~~~~~~~~~~
    at file://<tmpdir>/src/TimeLine.ts:31:22

TS2304 [ERROR]: Cannot find name 'HTMLCanvasElement'.
  declare canvas: HTMLCanvasElement;
                  ~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/TimeLine.ts:32:19

TS2304 [ERROR]: Cannot find name 'CanvasRenderingContext2D'.
  declare ctx: CanvasRenderingContext2D;
               ~~~~~~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/TimeLine.ts:33:16

Found 4 errors.

